--- a/telemetry_server/package.json
+++ b/telemetry_server/package.json
@@ -6,6 +6,7 @@
   "author": "Mike Green <mike.is.green@gmail.com>",
   "dependencies": {
     "csv": "^6.4.1",
+    "dotenv": "^17.2.1",
     "yargs": "^18.0.0"
   },
   "scripts": {
