--- a/telemetry_server/package.json
+++ b/telemetry_server/package.json
@@ -5,6 +5,8 @@
   "description": "Stores telemetry sent via TCP as a local CSV file",
   "author": "Mike Green <mike.is.green@gmail.com>",
   "dependencies": {
+    "@fast-csv/format": "^5.0.5",
+    "@msgpack/msgpack": "^3.1.2",
     "csv": "^6.4.1",
     "dotenv": "^17.2.1",
     "yargs": "^18.0.0"
