Transition from wifi to esp-now for rocket to ground comms

--- a/RocketWifi/platformio.ini
+++ b/RocketWifi/platformio.ini
@@ -14,16 +14,16 @@ board_build.partitions = partitions.csv
 lib_deps =
     adafruit/Adafruit BME280 Library@^2.2.4
     adafruit/Adafruit Unified Sensor@^1.1.15
-    esp32async/ESPAsyncWebServer@^3.9.3
-    bblanchon/ArduinoJson@^7.4.2
     h2zero/NimBLE-Arduino@^2.3.2
     https://github.com/UnexpectedMaker/tinypico-helper.git
 
 build_flags =
     -DCORE_DEBUG_LEVEL=4
     -DBOARD_HAS_PSRAM
-    -DWIFI_SSID=\"${sysenv.WIFI_SSID}\"
-    -DWIFI_PSK=\"${sysenv.WIFI_PSK}\"
+    -DGROUND_STATION_MAC=${sysenv.GROUND_STATION_MAC}
+    -DREADING_INTERVAL=${sysenv.READING_INTERVAL, 20}
+    -DTELEMETRY_TIMEOUT=${sysenv.TELEMETRY_TIMEOUT, 120000}
+    -DGROUND_REFERENCE_PRESSURE=${sysenv.GROUND_REFERENCE_PRESSURE, 1013.25f}
 
 ; Filesystem settings
 board_build.filesystem = littlefs
