--- a/GroundStationWifiLR/platformio.ini
+++ b/GroundStationWifiLR/platformio.ini
@@ -11,13 +11,9 @@ board_upload.flash_size = 8MB
 ; Enable PSRAM
 board_build.arduino.memory_type = qio_opi
 
-lib_deps =
-    bblanchon/ArduinoJson@^7.4.2
-
 build_flags =
     -DBOARD_HAS_PSRAM
-    -DWIFI_SSID=\"${sysenv.WIFI_SSID}\"
-    -DWIFI_PSK=\"${sysenv.WIFI_PSK}\"
+    -DROCKET_MAC=${sysenv.ROCKET_MAC}
     -DCORE_DEBUG_LEVEL=4
 
 extra_scripts =
