send sensor readings at full floating point precision, add commands to download and truncate onboard csv log

--- a/rocket/platformio.ini
+++ b/rocket/platformio.ini
@@ -21,6 +21,7 @@ build_flags =
     -DCORE_DEBUG_LEVEL=4
     -DBOARD_HAS_PSRAM
     -DGROUND_STATION_MAC=${sysenv.GROUND_STATION_MAC}
+    -DESPNOW_CHANNEL=${sysenv.ESPNOW_CHANNEL}
 
 ; Filesystem settings
 board_build.filesystem = littlefs
