--- a/ground-station/platformio.ini
+++ b/ground-station/platformio.ini
@@ -14,6 +14,7 @@ board_build.arduino.memory_type = qio_opi
 build_flags =
     -DBOARD_HAS_PSRAM
     -DROCKET_MAC=${sysenv.ROCKET_MAC}
+    -DESPNOW_CHANNEL=${sysenv.ESPNOW_CHANNEL}
     -DCORE_DEBUG_LEVEL=4
 
 extra_scripts =
